some updates an seech

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="lib/d3/d3.layout.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.geom.min.js"></script>
 
-    <script type="text/javascript" src="js/gv.js"></script>
+    <script type="text/javascript" src="js/gv.min.js"></script>
 
 
     <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
       </div>
 
       <footer>
-        <p>GraphVik (version 0.4.7) &middot; created in Boone, North Carolina with &hearts; by Brian Shumate &middot; <a href="https://github.com/brianshumate/GraphVik">Github</a></p>
+        <p>GraphVik (version 0.4.8) &middot; created in Boone, North Carolina with &hearts; by Brian Shumate &middot; <a href="https://github.com/brianshumate/GraphVik">Github</a></p>
       </footer>
 
     </div>
@@ -71,7 +71,6 @@
         <div class="modal-footer">
         </div>
     </div>
-
     <script type="text/javascript">
     var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.createoplex.com/" : "http://stats.createoplex.com/");
     document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
