--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="container">
           <a class="brand" href="#">GraphVik</a>
           <p class="pull-right">
-            <button class="btn" data-controls-modal="detailsmodal" data-backdrop="static" >What is this</button>
-            <button class="btn primary" onclick="window.location='http://brianshumate.com/';">thing by <strong>Brian Shumate</strong>?</button>
+            <button class="btn" data-controls-modal="detailsmodal" data-backdrop="static" >What is this thing</button>
+            <button class="btn primary" onclick="window.location='http://brianshumate.com/';"> by <strong>Brian Shumate</strong>?</button>
           </p>
         </div>
       </div>
@@ -52,7 +52,7 @@
       </div>
 
       <footer>
-        <p>GraphVik (version 0.4.8) &middot; created in Boone, North Carolina with &hearts; by Brian Shumate &middot; <a href="https://github.com/brianshumate/GraphVik">Github</a></p>
+        <p>GraphVik (version 0.5.0) &middot; created in Boone, North Carolina with &hearts; by Brian Shumate &middot; <a href="https://github.com/brianshumate/GraphVik">Github</a></p>
       </footer>
 
     </div>
@@ -63,7 +63,7 @@
             <h2><strong><em>GraphVik</em></strong> is my nerdy visual tribute to world renown artist &amp; awesome human <button class="btn large primary" onclick="window.location='http://www.vikmuniz.net/';"><strong>Vik Muniz</strong></button></h2>
         </div>
         <div class="modal-body">
-            <p>It is a small visualization experiment that consists of 1500 tiles which were programmatically derived from a photo of Mr. Muniz. These tiles are arranged in a force directed graph in which all connected nodes randomly radiate from a central node.</p>
+            <p>It is a small visualization experiment that consists of 828 tiles which were programmatically derived from a photo of Mr. Muniz. These tiles are arranged in a force directed graph in which all connected nodes randomly radiate from a central node.</p>
             <p style="text-align:center"><img src="http://media.brianshumate.com/graphvik/vmphoto_grid.jpg" alt="simplified photo and slice grid for GraphVik"></p>
             <h4>&ldquo;GraphVik&rdquo; is also a play on the word <em>graphic</em>. ;)</h4>
 
